@@ -1,1 +1,1 @@
-1sax.wav
+*.wav
