@@ -1,3 +1,7 @@
+New on 2004-10-24
+	* begin integration of libglade for menu
+	* fixes in autoconf magic
+
 New on 2004-04-10
 	* Begin rewrite in C: "Write in C, write in C ..."
 	* Cleanup of all unnecessary stuff
